--- a/style/main-style.css
+++ b/style/main-style.css
@@ -10,7 +10,12 @@ body {
   top: 0px;
   left: 0px;
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   align-items: center;
+  -webkit-justify-content: space-around;
   justify-content: space-around;
   text-align: center;
   vertical-align: middle;
@@ -30,6 +35,10 @@ body {
 
 nav {
   display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   align-items: center; }
 
 .nav-button {
@@ -123,6 +132,130 @@ a {
 #vis-3-title {
   border-bottom: 2px solid #467DA3; }
 
+.allOptions {
+  width: 80%;
+  display: inline-flex;
+  align-content: center;
+  margin: 20px 10% 20px 10%; }
+
+.selection {
+  width: 80%; }
+
+.right {
+  display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+  flex-flow: row wrap;
+  text-align: center;
+  vertical-align: middle; }
+
+.optionTitle {
+  font-weight: 600;
+  font-style: normal;
+  font-family: "nyt-franklin", arial, helvetica, sans-serif;
+  color: #000;
+  margin: 10px 0 10px 0; }
+
+.button {
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  font: arial, sans-serif; }
+
+.option1 {
+  background-color: #467DA3;
+  border: 2px solid #467DA3;
+  border-radius: 6px;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option1:hover {
+  background-color: white;
+  color: #467DA3;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option2 {
+  background-color: #A34846;
+  border: 2px solid #A34846;
+  border-radius: 6px;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option2:hover {
+  background-color: white;
+  color: #A34846;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option3 {
+  background-color: #D6C171;
+  border: 2px solid #D6C171;
+  border-radius: 6px;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option3:hover {
+  background-color: white;
+  color: #D6C171;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option4 {
+  background-color: #5CAE5A;
+  border: 2px solid #5CAE5A;
+  border-radius: 6px;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option4:hover {
+  background-color: white;
+  color: #5CAE5A;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option5 {
+  background-color: #D6D6D6;
+  border: 2px solid #D6D6D6;
+  border-radius: 6px;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.option5:hover {
+  background-color: white;
+  color: #D6D6D6;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
 .ctnt-txt-ctnr {
   width: 50%;
   margin: 0 25% 0 25%;
@@ -145,12 +278,32 @@ a {
 em {
   text-decoration: underline; }
 
-/* Map Styling */
+/* Vis Styling */
+.title {
+  font-weight: 600;
+  font-style: normal;
+  font-family: "nyt-franklin", arial, helvetica, sans-serif;
+  color: #000; }
+
 .land {
   fill: #333; }
 
 .state-boundary {
   fill: none;
   stroke: #fff; }
+
+.axis path {
+  fill: none;
+  stroke: #777;
+  shape-rendering: crispEdges; }
+
+.axis tick {
+  fill: none;
+  stroke: #777;
+  shape-rendering: crispEdges; }
+
+.axis text {
+  font-family: Lato;
+  font-size: 13px; }
 
 /*# sourceMappingURL=main-style.css.map */
