--- a/style/main-style.scss
+++ b/style/main-style.scss
@@ -207,7 +207,7 @@ a {
   font-style: normal;
   font-family: "nyt-franklin", arial, helvetica, sans-serif;
   color: #000;
-  
+
   margin: 10px 0 10px 0;
 }
 
@@ -220,6 +220,7 @@ a {
   display: inline-block;
   font-size: 20px;
   font: arial, sans-serif;
+  margin: 5px 0 5px 0;
 }
 
 .option1 {
